--- a/index_v2.html
+++ b/index_v2.html
@@ -10,7 +10,8 @@
 <div class="topnav">
   <a class="active" href="#home">Home</a>
   <a href="#cooking">Cooking</a>
-  <a href="#bank-notes">Bank Notes Archives</a>
+  <a href="#bank-notes">Banknotes</a>
+  <a href="#games">Games</a>
   <a href="#photos">Photos</a>
   <a href="#education">Education</a>
   <a href="#medicine">Medicine</a>
@@ -41,11 +42,10 @@ Here is an example that builds a facade of a building with a click of button. </
     </form>  
   </p>
 
-<h1>Some facts</h1>
 Aleppo is the second largest city in Syria. Famous for it's citadel, the city is one of the oldest continuously inhabited cities in the world; it may have been inhabited since the 6th millennium BC.<br>
 <p>A research about the city, can be downloaded here: <a href="https://dk33y2oh4bq75.cloudfront.net/documents/AFutureforAleppo.pdf">by clicking here</a>.</p>
 
-<h1>Fun and Games</h1>
+<h1>Games</h1>
 <ul>
 <li><h2>An online dice &#127922;</h2></li>
 <A HREF="https://s3.eu-west-2.amazonaws.com/halab.info/games/dice.html">Click to roll two dice</A></h2><br></body>
@@ -112,7 +112,7 @@ Listen to more facts using this free to enable <a href="https://www.amazon.co.uk
   </p>
 
 <p>
-  <h1>Bank Notes Archives</h1>
+  <h1>Banknotes</h1>
  Here are some specimens of withdrawn Syrian bank notes. 
 
 <h3 class="w3-center">Five Syrian Pounds, 1991</h3>
